tests/NormalTests/paczka2/big_fuzzy/21818338.err
Error in line 3: A501 A501 0,5
Error in line 1: RYIyJ2HqL A460 70,7
Error in line 4: A501 A464 35,5
Error in line 2: aUW3QD9 S944 7,3
Error in line 15: A501 A464 2,6
Error in line 19: Mo0I8Vb A460 11,8
Error in line 25: ykFRVw S944 19,5
Error in line 26: ykFRVw A460 1,1
Error in line 28: Mo0I8Vb A464 69,9
Error in line 36: ykFRVw A460 10,9
Error in line 37: Mo0I8Vb A460 74,9
Error in line 29: RYIyJ2HqL A464 3,2
Error in line 33: lOFkeJH A501 89,4
Error in line 38: ykFRVw A464 39,0
Error in line 35: KhlbEWdoub S944 56,5
Error in line 44: aUW3QD9 A501 29,2
Error in line 45: Mo0I8Vb A501 98,5
Error in line 60: A501 S944 74,3
Error in line 56: aUW3QD9 A460 56,6
Error in line 62: A501 A501 80,3
Error in line 58: Mo0I8Vb A460 271,6
Error in line 65: A501 S944 42,5
Error in line 73: KhlbEWdoub A501 57,5
Error in line 67: RYIyJ2HqL A464 83,3
Error in line 78: RYIyJ2HqL A460 5,4
Error in line 80: aUW3QD9 A460 60,7
Error in line 79: RYIyJ2HqL A464 46,8
Error in line 66: Mo0I8Vb A464 81,5
Error in line 96: RYIyJ2HqL A460 55,3
Error in line 103: Mo0I8Vb S944 79,1
Error in line 114: Mo0I8Vb A460 34,7
Error in line 121: KhlbEWdoub A501 13,4
Error in line 118: A501 S944 0,9
Error in line 134: RYIyJ2HqL S944 55,34
Error in line 125: RYIyJ2HqL A460 5,2
Error in line 140: lOFkeJH A460 91,0
Error in line 141: aUW3QD9 S944 17,7
Error in line 136: RYIyJ2HqL S944 273,1
Error in line 152: RYIyJ2HqL A501 95,4
Error in line 153: RYIyJ2HqL A464 87,1
Error in line 161: RYIyJ2HqL A460 52,4
Error in line 159: Mo0I8Vb A501 117,1
Error in line 166: lOFkeJH S944 97,9
Error in line 181: Mo0I8Vb A464 27,6
Error in line 190: lOFkeJH A464 29,2
Error in line 200: aUW3QD9 A501 87,9
Error in line 204: Mo0I8Vb A464 49,4
Error in line 211: RYIyJ2HqL A460 60,1
Error in line 214: aUW3QD9 S944 37,6
Error in line 220: ykFRVw A501 33,6
Error in line 230: A501 A501 28,3
Error in line 231: A501 A464 43,2
